syntax = "proto3";
package zetachain.zetacore.observer;

import "gogoproto/gogo.proto";
import "observer/observer.proto";

option go_package = "github.com/zeta-chain/zetacore/x/observer/types";

enum VoteType {
  option (gogoproto.goproto_enum_stringer) = true;
  SuccessObservation = 0;
  FailureObservation = 1; // Failure observation means , the the message that this voter is observing failed / reverted . It does not mean it was unable to observe.
  NotYetVoted = 2;
}

enum BallotStatus {
  option (gogoproto.goproto_enum_stringer) = true;
  BallotFinalized_SuccessObservation = 0;
  BallotFinalized_FailureObservation = 1;
  BallotInProgress = 2;
}

message Ballot {
  string ballot_identifier = 1 ;
  repeated string voter_list = 2;
  repeated VoteType votes = 3;
  ObservationType observation_type = 4;
  string BallotThreshold = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  BallotStatus ballot_status = 6;
}
